Carousel component & mobile device overflow-x fix

--- a/src/components/Carousel/styles/Carousel.module.css
+++ b/src/components/Carousel/styles/Carousel.module.css
@@ -1,8 +1,7 @@
-.app {
+.carousel {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
-
     transition: transform .350s ease-in-out;
 }
